# lambda-extractor

./: .editorconfig  .gitignore  pipeline.sh  pyproject.toml  template.yaml
lambda_api/: __init__.py  handler.py  metadata_extractor.py  recipe_extractor.py
