[tool.poetry]
name = "lambda-api"
version = "0.1.0"
description = "AWS Lambda project using Poetry"
authors = ["Ezzi <ezeddin.eddaouy@gmail.com>"]
packages = [
    { include = "lambda_api" }
]

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^2.30.0"
extruct = "0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
boto3 = "^1.28.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
